# Five_Crowns_CPP

./: Assembled.hpp  CMakeLists.txt  Cards.cpp  Cards.hpp  Computer.cpp  Computer.hpp  Deck.cpp  Deck.hpp  FiveCrowns.cpp  FiveCrowns.hpp  Game.cpp  Game.hpp  Human.cpp  Human.hpp  Player.cpp  Player.hpp  Round.cpp  Round.hpp  Utilities.cpp  Utilities.hpp  Validate.cpp  Validate.hpp  first.txt  log.txt  main.cpp
savedGames/: .txt  Case1.txt  Case2.txt  Case3.txt  eleven.txt  first.txt  five.txt  four.txt  save1.txt  second.txt  six.txt  trial1.txt  trial2.txt  trial3.txt  trial4.txt  trial5.txt  trs.txt  u.txt  u2.txt
